--- a/src/app/asset-page/asset-page.component.scss
+++ b/src/app/asset-page/asset-page.component.scss
@@ -83,7 +83,7 @@ $titleNavBg: #eee;
         margin: 3px;
         cursor: pointer;
     }
-    
+
     & .paginator i {
         // By increasing the size of the icon, we increase the hitbox/click-ability
         width: 1.5em;
@@ -198,7 +198,7 @@ $titleNavBg: #eee;
 .asset-page.fullscreen {
     background: #000;
     position: fixed;
-    z-index: 1000;
+    z-index: 3000;
     top: 0;
     left: 0;
     right: 0;
